Mes-8952 | large text alignment fixes (#1386)

--- a/src/components/common/data-row-custom/data-row-custom.scss
+++ b/src/components/common/data-row-custom/data-row-custom.scss
@@ -8,13 +8,6 @@
     align-items: center;
   }
 
-  .exclamation-indicator {
-    width: 26px;
-    height: 26px;
-    float: left;
-    vertical-align: middle;
-  }
-
   .labelTop {
     align-items: start;
   }
